# qtdatasetviewer

./: .gitignore  LICENSE  Makefile  README.md  README.rst  pyproject.toml
.github/workflows/: testing.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst
docs/source/_autosummary/: qtdatasetviewer.abstract_convert_to_pil.AbstractConvertToPil.rst  qtdatasetviewer.abstract_convert_to_pil.rst  qtdatasetviewer.qt_dataset_viewer.QtDatasetViewer.rst  qtdatasetviewer.qt_dataset_viewer.rst  qtdatasetviewer.rst
examples/torch_dataset/: dataloader.py  dataset.py
qtdatasetviewer/: __init__.py  abstract_convert_to_pil.py  qt_dataset_viewer.py
tests/: test_qtdatasetviewer.py
