[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "qtdatasetviewer"
version = "0.0.0"
description = "Torch dataset explorer"
license = "MIT"
authors = [
  "Toretak <toretak@gmail.com>"
]
maintainers = [
  "Toretak <toretak@gmail.com>"
]
readme = "README.rst"
homepage = "https://github.com/toretak/qtdatasetviewer"
repository = "https://github.com/toretak/qtdatasetviewer"
documentation = ""
keywords = [
  "python",
  "package",
  "template",
  "poetry"]
packages = [
  { include = "qtdatasetviewer" }
]

[tool.poetry.dependencies]
torch = ">=1.13.1"
pyqt5 = ">=5.15"
python = ">=3.8,<3.10"
numpy = ">=1.22.3"
pandas = ">=1.4.2"

[tool.poetry.dev-dependencies]
albumentations = ">=1.3"
torchvision = ">=0.14.1"
pytest = ">=7.1.1"
pytest-cov = ">=3.0.0"
mypy = ">=0.942"
isort = ">=5.10.1"
black = ">=22.3.0"
flake8 = ">=4.0.1"
bandit = ">=1.7.4"
Sphinx = ">=4.5.0"
sphinx-rtd-theme = ">=1.0.0"
sphinx-autodoc-typehints = ">=1.18.2"
nbsphinx = ">=0.8.8"
nbsphinx-link = ">=1.3.0"

[tool.black]
line-length = 79
target-version = ["py39"]
include_trailing_comma = true
extend-exclude = '''
  docs
'''

[tool.isort]
py_version=39
line_length = 79
profile = "black"
extend_skip_glob = ["docs/*"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
exclude = "docs"

[tool.pytest.ini_options]
testpaths = "tests"
python_files = [
    "test_*.py",
    "*_test.py",
    "tests.py",
]
